data/derived/fa15/progs/unify/prog1200.ml.out
Characters 168-192:
  |_ -> ((fst x + snd x )/10)::((fst x + snd x) mod 10) 
                               ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
